src/objects/Enterprise_SE_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Native POC</fullName>
                </value>
                <value>
                    <fullName>Application POC</fullName>
                </value>
                <value>
                    <fullName>Recruiting (reference) an employee</fullName>
                </value>
                <value>
                    <fullName>Recruiting (reference) an SE</fullName>
                </value>
                <value>
                    <fullName>SE generated Lunch &amp; Learn</fullName>
                </value>
                <value>
                    <fullName>Ace Pro certification (per SE)</fullName>
                </value>
                <value>
                    <fullName>Ace Certification (per SE)</fullName>
                </value>
                <value>
                    <fullName>Presenting a use case at a company lunch</fullName>
                </value>
                <value>
                    <fullName>Blog Post</fullName>
                </value>
                <value>
                    <fullName>New GC Article</fullName>
                </value>
                <value>
                    <fullName>Create a competitive analysis document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Put in the URL to your POC opportunities, blog posts, GC Article. For screenshots and attachments, use the notes and attachments section below to attach them.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Points_Earned__c</fullName>
        <formula>CASE(LOWER(TEXT(Activity_Type__c)), 
&quot;cloud native poc&quot;,500, 
&quot;application poc&quot;,300, 
&quot;recruiting (reference) an employee&quot;,400, 
&quot;recruiting (reference) an se&quot;,500, 
&quot;se generated lunch &amp; learn&quot;,100, 
&quot;ace pro certification (per se)&quot;,150, 
&quot;ace certification (per se)&quot;,100, 
&quot;presenting a use case at a company lunch&quot;,100, 
&quot;blog post&quot;,50, 
&quot;new gc article&quot;,50, 
&quot;create a competitive analysis doc&quot;,150, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points Earned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Enterprise SE Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Enterprise SE Activity #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enterprise SE Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Activity_Type</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Activity_Type__c)=&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Activity_Type__c</errorDisplayField>
        <errorMessage>Please fill in the type of activity to save this record.</errorMessage>
    </validationRules>
</CustomObject>